<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <!--     android:background="#4A7B6F"  -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:gravity="center"
        android:textSize="9pt" />
    
    <LinearLayout 
       	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="#242E35" 
    	android:baselineAligned="false">
        <LinearLayout
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:orientation="vertical">
            
            <ToggleButton 
                android:id="@+id/toggle"
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:textOn="@string/ToggleOn"
    			android:textOff="@string/ToggleOff"/>
            <CheckBox 
                android:id="@+id/checkNegrita"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkNegrita"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:orientation="vertical">
            
            <Button 
                android:id="@+id/Boton" 
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:text="@string/textoBoton"/>
            <CheckBox
                android:id="@+id/checkCursiva" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkCursiva"/>       
        </LinearLayout>
    </LinearLayout>
    
        
    <RadioGroup 
        android:id="@+id/grupoRadio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4A7B6F"
        >
        
        <RadioButton 
            android:id="@+id/ingles"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/radioIngles"/>
        <RadioButton 
            android:id="@+id/espanol"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/radioEspanol"/>
        <RadioButton 
            android:id="@+id/portugues"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/radioPortugues"/>
        <RadioButton 
            android:id="@+id/aleman"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/radioAleman"/>
        <RadioButton 
            android:id="@+id/italiano"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/radioItaliano"/>
    </RadioGroup>
    
	<TextView
	    android:id="@+id/texto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/textoResultado"
        android:gravity="center"
        android:textSize="9pt"
        android:background="#242E35" />
</LinearLayout>